# unit-testing-todolist

./: .gitignore  README.md  config.py  db.sqlite3  pyproject.toml  unit_testing_todolist.postman_collection.json
.github/workflows/: pytest.yml
apps/core/: form.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/tests/integ/: test_items_view.py  test_user_views.py  test_users_view.py
apps/core/tests/unit/: test_base_view.py
config/: settings.py  urls.py
core/: exceptions.py  models.py
old_test/samples/: todo_list_sample.txt
old_test/unit/: test_item.py  test_user.py
