[project]
name = "unit_testing"
version = "0.0.2"
description = "Projet pour le CC du cours de Tests Unitaires et Logiciels"
readme = "README.md"
keywords = ["unit_testing"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "django",
    "django-stubs",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
]

[tool.pytest.ini_options]
addopts = ["-vv", "--tb=short"]

[tool.coverage.run]
omit = [
    "**/tests/*"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]